# cmake_cpp_project_template

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Makefile.in  Makefile_driver.in  Makefile_v1.in  README.md  build_targets.cmake  build_utils.cmake  common.cmake  common.mk  docs.cmake  driver_targets.cmake  externals_targets.cmake  general.cmake  init_project.sh  main.cmake  sanitizers.cmake  sources.cmake.in  utils.cmake
cmake/: build_flags.cmake  build_targets.cmake  build_utils.cmake  common.cmake  docs.cmake  external_targets.cmake  main.cmake
src/: CMakeLists.txt
src/drivers/hello_module/: main.c
src/executable/: CMakeLists.txt  main.cpp
src/executable_boost/: CMakeLists.txt  main.cpp
src/libs/shared_lib_3/: shared_lib_3.h
src/libs/shared_lib_3/details/: shared_lib_3.cpp
src/libs/static_lib/: CMakeLists.txt
src/libs/static_lib/details/: static_lib.cpp
src/libs/static_lib_2/: CMakeLists.txt
src/libs/static_lib_2/details/: static_lib_2.cpp
src/libs/static_lib_3/: CMakeLists.txt
src/libs/static_lib_boost/: CMakeLists.txt  static_lib_boost.h
src/libs/static_lib_boost/details/: static_lib_boost.cpp
tests/: CMakeLists.txt  Makefile  README.md  check_build.sh  find_packages.cmake  sources.cmake
tests/drivers/hello_module/: CMakeLists.txt
tests/drivers/hello_module/module/logging/: logging.h
tests/libs/interface_lib/: CMakeLists.txt  interface_lib.h
tests/libs/shared_lib/: CMakeLists.txt  shared_lib.h
tests/libs/shared_lib/details/: shared_lib.cpp
tests/libs/shared_lib_2/: CMakeLists.txt  shared_lib_2.h
tests/libs/shared_lib_2/details/: shared_lib_2.cpp
tests/libs/shared_lib_3/: CMakeLists.txt
tests/libs/static_lib/: CMakeLists.txt  static_lib.h
tests/libs/static_lib_2/: CMakeLists.txt  static_lib_2.h
tests/libs/static_lib_3/: CMakeLists.txt
tests/src/: CMakeLists.txt  main.cpp
tests/src/executable/: main.cpp
tests/src/libs/interface_lib/: CMakeLists.txt  interface_lib.h
tests/src/libs/shared_lib/: CMakeLists.txt
tests/src/libs/shared_lib_2/: CMakeLists.txt
tests/src/libs/shared_lib_3/: CMakeLists.txt
tests/src/libs/static_lib_3/: static_lib_3.h
tests/src/libs/static_lib_3/details/: static_lib_3.cpp
tests/src/tests/: CMakeLists.txt  ut_custom_test_target_with_args.sh  ut_test_target.cpp
tests/tests/: CMakeLists.txt  ut_test_target.cpp
